2001-10-01 Terry Biggs <tbiggs@users.sourceforge.net>

	* fixed another shortcut bar bug - caused crash when deleting last 
	  shortcut item in a group
	  

2001-09-20 Terry Biggs <tbiggs@users.sourceforge.net>

	* added po directory and gettext support
	* added _() to strings that need to be translated - lots of work left to do
	

2001-09-18 Terry Biggs <tbiggs@users.sourceforge.net>

	* added horz scroll bar to commentary window.
	* fixed the last fix - right this time I hope.


2001-09-15 Terry Biggs <tbiggs@users.sourceforge.net>

	* fixed shortcut-bar crash on changing groups
	  which started with gal snapshot 200109150708 release
	  

2001-09-13 Terry Biggs <tbiggs@users.sourceforge.net>

	*  gs will now display book introductions for thml commentaries
	   that have them.


2001-09-10 Terry Biggs <tbiggs@users.sourceforge.net>

	*  fixed bug that cause gs to crash when selecting text
	   in interlinear page
	

2001-09-04 Terry Biggs <tbiggs@users.sourceforge.net>

	*  Changed Font= and Font size= for module conf files
	   to GSFont= and GSFont size= to avoid conflicts since we
	   use different froms.
	* Fixed not remembered morph tags state bug
	

2001-08-23 Terry Biggs <tbiggs@users.sourceforge.net>

	* added expand all and collapse all items to the 
	   bookmark tree's popup menu
	

2001-08-22 Terry Biggs <tbiggs@users.sourceforge.net>

	* added about.png
	

2001-08-21Terry Biggs <tbiggs@users.sourceforge.net>

	* release  0.5.2
	* added files gs_mainmenu_cb.*
	* renamed callback.* to gs_gui_cb.*


2001-08-18 Terry Biggs <tbiggs@users.sourceforge.net>

	* Added notebook to verselist group of shortcut bar
	  with three pages - verse list, search results and viewer
	* Changed gs_display.* files to sw_display.*
	* Changed the names of the filters:
		gs_gbfhtml.* to gbfhtmlhref.*
		gs_thmlhtml.* to thmlhtmlhref.*
	* removed gs_search.* and ga_search_cb.*
	* removed display.*

2001-08-18 Terry Biggs <tbiggs@users.sourceforge.net>

	* added unlock module dialog