@@ -38,6 +38,7 @@ extern "C" {
 	void initSWORD(GtkWidget * mainform);
 	void modNameFromDesc(gchar * modName, gchar * modDesc);
 	void updateinterlinearpage(void);
+
 	void shutdownSWORD(void);
 	void FillDictKeysSWORD(void);
 	void changeVerseSWORD(gchar * ref);
